[tool.poetry]
name = "iascripts"
version = "0.1.0"
description = "A monorepo compiling investment/market analysis scripts."
authors = ["mmrakib <mayaz@rakib.com.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
pandas = "^2.2.3"
matplotlib = "^3.9.3"
aiohttp = "^3.11.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
